--- a/wsgiadmin/templates/admin.html
+++ b/wsgiadmin/templates/admin.html
@@ -386,6 +386,9 @@
                     <div class="alert alert-{{ message.tags }}">{{ message }}</div>
                 {% endfor %}
             {% endif %}
+            {% if not user.parms.enable %}
+                <div class="alert alert-{{ message.tags }}">{% trans "Your account has been disabled. Reason: insufficient amount of credits" %}</div>
+            {% endif %}
         </div>
         {% block content %}{% endblock %}
     </div>
